--- a/forgejo/docker-compose.yml
+++ b/forgejo/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "traefik.http.routers.forgejo.rule=Host(`git.lizainslie.dev`)"
       - "traefik.http.routers.forgejo.entrypoints=websecure"
       - "traefik.http.routers.forgejo.tls.certresolver=le"
-      - "traefik.http.services.gitea.loadbalancer.server.port=3000"
+      - "traefik.http.services.forgejo.loadbalancer.server.port=3000"
 
 networks:
   traefik:
