--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - postgres
       - traefik
     labels:
+      - "traefik.enable=true"
       - "traefik.http.routers.adminer.rule=Host(`adminer.ryuma.lizainslie.dev`)"
       - "traefik.http.routers.adminer.entrypoints=websecure"
       - "traefik.http.routers.adminer.tls=true"
