--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - "traefik.http.routers.immich.rule=Host(`immich.lizainslie.dev`)"
       - "traefik.http.routers.immich.entrypoints=websecure"
       - "traefik.http.routers.immich.tls=true"
+      - "traefik.http.routers.immich.tls.certresolver=le"
       - "traefik.http.services.immich.loadbalancer.server.port=2283"
 
   immich-machine-learning:
