--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "traefik.http.routers.adminer.rule=Host(`adminer.ryuma.lizainslie.dev`)"
       - "traefik.http.routers.adminer.entrypoints=websecure"
       - "traefik.http.routers.adminer.tls=true"
+      - "traefik.http.routers.adminer.tls.certresolver=le"
 
   postgres:
     image: postgres
