--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   adminer:
     image: adminer
+    container_name: adminer
     environment:
       ADMINER_DEFAULT_SERVER: postgres
     depends_on:
